Release notes for Version 1.26 (June 2018 -- )
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- New functions/commands GPIO (Raspberry)