@@ -1,3 +1,4 @@
 Release notes for Version 1.26 (June 2018 -- )
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 - New functions/commands GPIO (Raspberry)
+- fixed bug in virtual-machine/compiler (RasPi, signed char)
